src/components/Navigation/Navigation.module.css
:root {
  --hoam-navigation-height: 420px;
  --hoam-link-height: 80px;
}

.root {
  display: none;
  height: auto;
}

[data-variant="default"] {
  background-color: var(--hoam-color-neutral-900);
  position: relative;
  z-index: 998;
}

[data-variant="fixed"] {
  position: sticky;
  top: 0;
  z-index: 10000;
  width: 100%;
}

[data-variant="fixed"]:hover {
  background-color: var(--hoam-color-neutral-900);
}

[data-variant="fixed"] + .hoam-hero {
  margin-top: calc(var(--hoam-link-height) * -1);
}

@media (min-width: 1200px) {
  .root {
    display: block;
  }
}

.inner {
  display: grid;
  gap: var(--hoam-spacing-2);
  grid-template-columns: 1fr 120px 1fr;
}

.link {
  align-items: center;
  background: none;
  border: none;
  color: var(--hoam-color-nav-item-color);
  cursor: pointer;
  display: inline-flex;
  font: var(--hoam-typography-button-1);
  height: var(--hoam-link-height);
  padding: var(--hoam-spacing-1) var(--hoam-spacing-2);
  text-decoration: none;
}

.link:hover,
.link:focus {
  color: var(--hoam-color-moon-900);
  text-decoration: underline;
}

.list {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  gap: var(--hoam-spacing-2);
}

.list[data-alignment="right"] {
  justify-content: flex-end;
}

.logo {
  align-items: center;
  display: inline-flex;
  width: 120px;
}

.panel {
  background-color: var(--hoam-color-neutral-800);
  box-shadow: var(--hoam-shadow-small), var(--hoam-shadow-medium);
  height: var(--hoam-navigation-height);
  left: 0;
  max-width: 100%;
  position: absolute;
  top: auto;
  width: 100dvw;
}

.panelTopLevel {
  height: var(--hoam-navigation-height);
  padding: var(--hoam-spacing-4) 0;
  position: relative;
  width: 30%;
}

.panelSubLevel {
  background-color: var(--hoam-color-neutral-700);
  height: var(--hoam-navigation-height);
  left: 100%;
  overflow: auto;
  padding: var(--hoam-spacing-4);
  position: absolute;
  top: 0;
  width: 233.333%; /* This should be 2.33 times the width of the parent to fill space correctly */
}

.panelPromo {
  height: 100%;
}

.panel[hidden],
.panelSubLevel[hidden] {
  display: none;
}

.groupTopLink {
  align-items: center;
  background: none;
  background-color: none;
  border: none;
  color: var(--hoam-color-text-link);
  cursor: pointer;
  display: flex;
  font: var(--hoam-typography-body-1);
  justify-content: space-between;
  padding: var(--hoam-spacing-4);
  text-decoration: none;
  width: 100%;
}

.groupTopLink:hover,
.groupTopLink:focus-visible {
  background-color: var(--hoam-color-neutral-900);
}

.panelSubLevel[data-layout="list"] .panelGroup {
  columns: 3;
  column-gap: var(--hoam-spacing-4);
}

.panelSubLevel[data-layout="list"] .panelGroupSection {
  break-inside: avoid;
  display: flex;
  flex-direction: column;
}

.panelGroupSection {
  margin-bottom: var(--hoam-spacing-4);
}

.panelSubLevel[data-layout="thumbnail"] .panelGroupSection {
  display: flex;
  flex-direction: column;
  gap: var(--hoam-spacing-2);
}

.panelGroupSection a[data-sub-link] {
  color: var(--hoam-color-text-link);
  font: var(--hoam-typography-label-1);
  text-decoration: none;
}

.panelGroupSection a[data-sub-link].panelGroupHeaderFirst {
  font-weight: bold;
  margin-bottom: var(--hoam-spacing-1);
  text-transform: uppercase;
}

.panelGroupSection a[data-sub-link]:hover {
  color: var(--hoam-color-text-link-hover);
  text-decoration: underline;
}

@media (prefers-reduced-motion: reduce) {
  .panel,
  .panelSubLevel {
    transition: none !important;
  }
}

.promoWrapper {
  height: 100%;
}

